crates/executor/src/tests/sql/ddl/snapshots/merge_into/query_merge_into_on_false_with_populated_source.snap
---
source: crates/executor/src/tests/sql/ddl/merge_into.rs
description: "\"SELECT COUNT(*) as row_count FROM embucket.public.manifest\""
info: "Setup queries: CREATE TABLE embucket.public.manifest (model VARCHAR, last_success TIMESTAMP); MERGE INTO manifest m USING (SELECT column1 as model, column2 as last_success FROM (VALUES ('model_a', CAST('2025-01-01' AS TIMESTAMP)), ('model_b', CAST('2025-01-02' AS TIMESTAMP)))) s ON (FALSE) WHEN NOT MATCHED THEN INSERT (model, last_success) VALUES (s.model, s.last_success)"
---
Ok(
    [
        "+-----------+",
        "| row_count |",
        "+-----------+",
        "| 2         |",
        "+-----------+",
    ],
)
