crates/executor/src/tests/sql/ddl/snapshots/merge_into/query_merge_into_only_update_rowcount.snap
---
source: crates/executor/src/tests/sql/ddl/merge_into.rs
description: "\"MERGE INTO merge_target USING merge_source ON merge_target.id = merge_source.id\\n     WHEN MATCHED THEN UPDATE SET merge_target.description = merge_source.description\""
info: "Setup queries: CREATE TABLE embucket.public.merge_target (ID INTEGER, description VARCHAR); CREATE TABLE embucket.public.merge_source (ID INTEGER, description VARCHAR); INSERT INTO embucket.public.merge_target VALUES (1, 'existing row'); INSERT INTO embucket.public.merge_source VALUES (1, 'updated row')"
---
Ok(
    [
        "+------------------------+",
        "| number of rows updated |",
        "+------------------------+",
        "| 1                      |",
        "+------------------------+",
    ],
)


