crates/executor/src/tests/sql/ddl/snapshots/merge_into/query_merge_into_without_distributed_enable.snap
---
source: crates/executor/src/tests/sql/ddl/merge_into.rs
description: "\"SELECT * FROM t1 ORDER BY a,b,c\""
info: "Setup queries: CREATE OR REPLACE TABLE t1(a int,b string, c string); CREATE OR REPLACE TABLE t2(a int,b string, c string); INSERT INTO t1 VALUES(1,'b1','c1'),(2,'b2','c2'); INSERT INTO t1 VALUES(2,'b3','c3'),(3,'b4','c4'); INSERT INTO t2 VALUES(1,'b_5','c_5'),(3,'b_6','c_6'); INSERT INTO t2 VALUES(2,'b_7','c_7'); MERGE INTO t1 USING (SELECT * FROM t2) AS t2 ON t1.a = t2.a WHEN MATCHED THEN UPDATE SET t1.c = t2.c; INSERT INTO t2 VALUES(4,'b_8','c_8'); MERGE INTO t1 USING (SELECT * FROM t2) AS t2 ON t1.a = t2.a WHEN MATCHED THEN UPDATE SET t1.c = t2.c WHEN NOT MATCHED THEN INSERT (a,b,c) VALUES(t2.a,t2.b,t2.c)"
---
Ok(
    [
        "+---+-----+-----+",
        "| a | b   | c   |",
        "+---+-----+-----+",
        "| 1 | b1  | c_5 |",
        "| 2 | b2  | c_7 |",
        "| 2 | b3  | c_7 |",
        "| 3 | b4  | c_6 |",
        "| 4 | b_8 | c_8 |",
        "+---+-----+-----+",
    ],
)
